🗂️ 3단계 - 기능 우선 패키지 구성하기 (#416)
* chore(products): product 컨텍스트 분리

* chore(menu): menu 컨텍스트 분리

menu에 menugroup도 포함.

* chore(order): order 컨텍스트 분리

- ordertable도 추가

* chore(order): order 컨텍스트 분리

- ordertable도 추가
- 테스트코드도 분리

* chore(DeliveryAgency): 배달대행업체Client 패키지 변경

- DIP 생각하기

* chore(ProfanityDetection): 비속어 탐지 외부 시스템 적용

- product와 menu를 나눠서 적용.

* chore(OrderType): 패키지 이동